Large value for CompileThresholdScaling causes assert

XMLWordPrintable

    • b16

        $ java -XX:CompileThresholdScaling=12345678901234567890.0 -version
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/powerOfTwo.hpp:54
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/jdk/open/src/hotspot/share/utilities/powerOfTwo.hpp:54), pid=4147940, tid=4147941
        # assert(value > T(0)) failed: value must be > 0
        #
        # JRE version: (19.0) (fastdebug build )
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 19-internal-adhoc.iklam, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)

              Assignee:
              Ioi Lam
              Reporter:
              Ioi Lam
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: