8283641: Large value for CompileThresholdScaling causes assert