src/hotspot/share/compiler/compilerDefinitions.cpp
@@ -127,7 +127,14 @@ intx CompilerConfig::scaled_compile_threshold(intx threshold, double scale) {
   if (scale == 1.0 || scale < 0.0) {
     return threshold;
   } else {
-    return (intx)(threshold * scale);
+    double v = threshold * scale;
+    if (v > max_intx) {
+      return max_intx;
+    } else if (v < min_intx) {
+      return min_intx;
+    } else {
+      return (intx)(v);
+    }
   }
 }
 
